@@ -18,10 +18,8 @@
 package com.seleniumtests.browserfactory.mobile;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
-import java.util.regex.Pattern;
 
 import org.json.JSONArray;
 import org.json.JSONObject;
@@ -39,14 +37,14 @@ import com.seleniumtests.util.osutility.OSUtility;
  *
  */
 public class InstrumentsWrapper {
-	
+
 	// xcrun xctrace list devices
 	
 	// examples
 	// Apple TV 1080p (10.2) [6444F65D-DA15-4505-8307-4520FD346ACE] (Simulator)
 	// Mac mini [CBFA063D-2535-5FD8-BA05-CE8D3683D6BA]
-	private static final Pattern REG_DEVICE = Pattern.compile("([a-zA-Z0-9 ]+).*?\\((\\d+\\.\\d+\\.?\\d?)\\).*?\\[(.*?)\\].*");
-		
+	public static final String DEVICES = "devices";
+
 
 	public InstrumentsWrapper() {
 		checkInstallation();
@@ -57,7 +55,7 @@ public class InstrumentsWrapper {
 			throw new ConfigurationException("InstrumentsWrapper can only be used on Mac");
 		}
 		
-		String out = OSCommand.executeCommandAndWait("xcrun");
+		String out = OSCommand.executeCommandAndWait(new String[] {"xcrun"});
 		if (!out.contains("xcrun [options]")) {
 			throw new ConfigurationException("xcrun is not installed");
 		}
@@ -67,40 +65,27 @@ public class InstrumentsWrapper {
 	 * Use 'instruments -s devices' to know which devices are available for test
 	 */
 	public List<MobileDevice> parseIosDevices() {
-		String output = OSCommand.executeCommandAndWait("xcrun simctl list devices available --json");
+		String output = OSCommand.executeCommandAndWait(new String[] {"xcrun", "simctl", "list", DEVICES, "available", "--json"});
 		List<MobileDevice> devList = new ArrayList<>();
 		
 		JSONObject devicesJson = new JSONObject(output);
 		
-		for (String family: devicesJson.getJSONObject("devices").keySet()) {
+		for (String family: devicesJson.getJSONObject(DEVICES).keySet()) {
 			if (!family.contains("iOS")) {
 				continue;
 			}
 			String version = family.replace("com.apple.CoreSimulator.SimRuntime.iOS-", "").replace("-", ".");
-			JSONArray familyDevices = devicesJson.getJSONObject("devices").getJSONArray(family);
+			JSONArray familyDevices = devicesJson.getJSONObject(DEVICES).getJSONArray(family);
 			for (Object device: familyDevices.toList()) {
 				MobileDevice dev = new MobileDevice(((Map<String, String>)device).get("name").split("\\(")[0].trim(), 
 						((Map<String, String>)device).get("udid"), 
 						"iOS", 
-						version, 
-						Arrays.asList(new BrowserInfo(BrowserType.SAFARI, "latest", null)));
+						version,
+                        List.of(new BrowserInfo(BrowserType.SAFARI, "latest", null)));
 				devList.add(dev);
 			}
 		}
-		
-		/*for (String line: output.split("\n")) {
-			line = line.trim();
-			Matcher matcher = REG_DEVICE.matcher(line);
 
-			if (matcher.matches()) {
-				MobileDevice dev = new MobileDevice(matcher.group(1).trim(), 
-						matcher.group(3), 
-						"iOS", 
-						matcher.group(2), 
-						Arrays.asList(new BrowserInfo(BrowserType.SAFARI, "latest", null)));
-				devList.add(dev);
-			}
-		}*/
 		return devList;
 	}
 }
